// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnswerOption render snapshot: renders correct option with feedback 1`] = `
<Advanced
  className="answer-option d-flex flex-row justify-content-between flex-nowrap pb-2 pt-2"
  onToggle={[Function]}
  open={false}
>
  <div
    className="mr-1 d-flex"
  >
    <Checker
      answer={
        {
          "correct": true,
          "id": "A",
          "selectedFeedback": "some feedback",
          "title": "Answer 1",
        }
      }
      disabled={false}
      hasSingleAnswer={false}
      setAnswer={[Function]}
    />
  </div>
  <div
    className="ml-1 flex-grow-1"
  >
    <ExpandableTextArea
      error={false}
      errorMessage={null}
      id="answer-A"
      images={{}}
      isLibrary={false}
      learningContextId="course+org+run"
      placeholder="Enter an answer"
      setContent={[Function]}
      value="Answer 1"
    />
    <Body>
      <injectIntl(ShimmedIntlComponent)
        answer={
          {
            "correct": true,
            "id": "A",
            "selectedFeedback": "some feedback",
            "title": "Answer 1",
          }
        }
        images={{}}
        intl={
          {
            "formatMessage": [Function],
          }
        }
        isLibrary={false}
        learningContextId="course+org+run"
        problemType="multiplechoiceresponse"
        setSelectedFeedback={[Function]}
        setUnselectedFeedback={[Function]}
      />
    </Body>
  </div>
  <div
    className="d-flex flex-row flex-nowrap"
  >
    <Trigger
      aria-label="Toggle feedback"
      className="btn-icon btn-icon-primary btn-icon-md align-items-center"
    >
      <Icon
        alt="Toggle feedback"
      />
    </Trigger>
    <IconButton
      alt="Delete answer"
      iconAs="Icon"
      onClick={[Function]}
      variant="primary"
    />
  </div>
</Advanced>
`;

exports[`AnswerOption render snapshot: renders correct option with numeric input problem 1`] = `
<Advanced
  className="answer-option d-flex flex-row justify-content-between flex-nowrap pb-2 pt-2"
  onToggle={[Function]}
  open={false}
>
  <div
    className="mr-1 d-flex"
  >
    <Checker
      answer={
        {
          "correct": true,
          "id": "A",
          "selectedFeedback": "some feedback",
          "title": "Answer 1",
        }
      }
      disabled={true}
      hasSingleAnswer={false}
      setAnswer={[Function]}
    />
  </div>
  <div
    className="ml-1 flex-grow-1"
  >
    <Form.Control
      as="textarea"
      autoResize={true}
      className="answer-option-textarea text-gray-500 small"
      onChange={[Function]}
      placeholder="Enter an answer"
      rows={1}
      value="Answer 1"
    />
    <Body>
      <injectIntl(ShimmedIntlComponent)
        answer={
          {
            "correct": true,
            "id": "A",
            "selectedFeedback": "some feedback",
            "title": "Answer 1",
          }
        }
        images={{}}
        intl={
          {
            "formatMessage": [Function],
          }
        }
        isLibrary={false}
        learningContextId="course+org+run"
        problemType="numericalresponse"
        setSelectedFeedback={[Function]}
        setUnselectedFeedback={[Function]}
      />
    </Body>
  </div>
  <div
    className="d-flex flex-row flex-nowrap"
  >
    <Trigger
      aria-label="Toggle feedback"
      className="btn-icon btn-icon-primary btn-icon-md align-items-center"
    >
      <Icon
        alt="Toggle feedback"
      />
    </Trigger>
    <IconButton
      alt="Delete answer"
      iconAs="Icon"
      onClick={[Function]}
      variant="primary"
    />
  </div>
</Advanced>
`;

exports[`AnswerOption render snapshot: renders correct option with numeric input problem and answer range 1`] = `
<Advanced
  className="answer-option d-flex flex-row justify-content-between flex-nowrap pb-2 pt-2"
  onToggle={[Function]}
  open={false}
>
  <div
    className="mr-1 d-flex"
  >
    <Checker
      answer={
        {
          "correct": true,
          "id": "A",
          "isAnswerRange": true,
          "selectedFeedback": "selected feedback",
          "title": "Answer 1",
          "unselectedFeedback": "unselected feedback",
        }
      }
      disabled={true}
      hasSingleAnswer={false}
      setAnswer={[Function]}
    />
  </div>
  <div
    className="ml-1 flex-grow-1"
  >
    <div>
      <Form.Control
        as="textarea"
        autoResize={true}
        className="answer-option-textarea text-gray-500 small"
        onChange={[Function]}
        placeholder="Enter an answer range"
        rows={1}
        value="Answer 1"
      />
      <div
        className="pgn__form-switch-helper-text"
      >
        <FormattedMessage
          defaultMessage="Enter min and max values separated by a comma. Use a bracket to include the number next to it in the range, or a parenthesis to exclude the number. For example, to identify the correct answers as 5, 6, or 7, but not 8, specify [5,8)."
          description="Helper text describing usage of answer ranges"
          id="authoring.answerwidget.answer.answerRangeHelperText"
        />
      </div>
    </div>
    <Body>
      <injectIntl(ShimmedIntlComponent)
        answer={
          {
            "correct": true,
            "id": "A",
            "isAnswerRange": true,
            "selectedFeedback": "selected feedback",
            "title": "Answer 1",
            "unselectedFeedback": "unselected feedback",
          }
        }
        images={{}}
        intl={
          {
            "formatMessage": [Function],
          }
        }
        isLibrary={false}
        learningContextId="course+org+run"
        problemType="numericalresponse"
        setSelectedFeedback={[Function]}
        setUnselectedFeedback={[Function]}
      />
    </Body>
  </div>
  <div
    className="d-flex flex-row flex-nowrap"
  >
    <Trigger
      aria-label="Toggle feedback"
      className="btn-icon btn-icon-primary btn-icon-md align-items-center"
    >
      <Icon
        alt="Toggle feedback"
      />
    </Trigger>
    <IconButton
      alt="Delete answer"
      iconAs="Icon"
      onClick={[Function]}
      variant="primary"
    />
  </div>
</Advanced>
`;

exports[`AnswerOption render snapshot: renders correct option with selected unselected feedback 1`] = `
<Advanced
  className="answer-option d-flex flex-row justify-content-between flex-nowrap pb-2 pt-2"
  onToggle={[Function]}
  open={false}
>
  <div
    className="mr-1 d-flex"
  >
    <Checker
      answer={
        {
          "correct": true,
          "id": "A",
          "selectedFeedback": "selected feedback",
          "title": "Answer 1",
          "unselectedFeedback": "unselected feedback",
        }
      }
      disabled={false}
      hasSingleAnswer={false}
      setAnswer={[Function]}
    />
  </div>
  <div
    className="ml-1 flex-grow-1"
  >
    <ExpandableTextArea
      error={false}
      errorMessage={null}
      id="answer-A"
      images={{}}
      isLibrary={false}
      learningContextId="course+org+run"
      placeholder="Enter an answer"
      setContent={[Function]}
      value="Answer 1"
    />
    <Body>
      <injectIntl(ShimmedIntlComponent)
        answer={
          {
            "correct": true,
            "id": "A",
            "selectedFeedback": "selected feedback",
            "title": "Answer 1",
            "unselectedFeedback": "unselected feedback",
          }
        }
        images={{}}
        intl={
          {
            "formatMessage": [Function],
          }
        }
        isLibrary={false}
        learningContextId="course+org+run"
        problemType="choiceresponse"
        setSelectedFeedback={[Function]}
        setUnselectedFeedback={[Function]}
      />
    </Body>
  </div>
  <div
    className="d-flex flex-row flex-nowrap"
  >
    <Trigger
      aria-label="Toggle feedback"
      className="btn-icon btn-icon-primary btn-icon-md align-items-center"
    >
      <Icon
        alt="Toggle feedback"
      />
    </Trigger>
    <IconButton
      alt="Delete answer"
      iconAs="Icon"
      onClick={[Function]}
      variant="primary"
    />
  </div>
</Advanced>
`;
